--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/custom.css') }}">
+    <script src="https://kit.fontawesome.com/e2ebf4717a.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -117,7 +118,7 @@
                                 class="fa fa-pen fa-1" aria-hidden="true"></i></button></td>
 
                     <td><button class="btn btn-outline-secondary btn-sm remove" data-source="{{item.id}}"
-                            type="button">Delete</button></td>
+                            type="button">ggwp</button></td>
                 </tr>
                 {% endfor %}
 
