--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -118,7 +118,7 @@
                                 class="fa fa-pen fa-1" aria-hidden="true"></i></button></td>
 
                     <td><button class="btn btn-outline-secondary btn-sm remove" data-source="{{item.id}}"
-                            type="button">ggwp</button></td>
+                            type="button"><i class="fa-solid fa-trash"></i></button></td>
                 </tr>
                 {% endfor %}
 
